--- a/src/app/navbar.module.css
+++ b/src/app/navbar.module.css
@@ -17,3 +17,17 @@ letter-spacing: -2px;
     position: relative;
     top: .1rem;
 }
+
+.scrolled{
+    left: -1rem;
+    top: -1rem;
+
+    transition: .1s ease-in-out all;
+}
+
+@media (max-width:600px ){ 
+    .navbarContainer h1{
+       
+    }
+
+   }
