--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,9 @@
   --font-family:'Work Sans', sans-serif;
   --paragraph-size: 1rem;
   --heading-size:2rem;
-  --color-bg:#ffffff;
-  --xs:600px;
-  --sm:767.98px;
-  --md:991.98px;
-  --lg: 1199.98px;
+  --color-bg:#ffffff; 
+  --color-bg-black:#000000; 
+  --color-bg-green:#14A800; 
 }
 
 body{
@@ -33,4 +31,10 @@ a{
   font-family: var(--font-family);
   cursor: pointer;
   margin-left: 1rem;
+}
+
+.home-btn:hover{
+  background-color: var(--color-bg);
+  transition: .3s ease-in-out all;
+  color: var(--color-bg-black );
 }
