--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -76,6 +76,16 @@
   margin-left: 1rem;
 }
 
+.SecondPageContainer h1{
+text-transform: uppercase;
+font-size: 2.5rem;
+font-weight: 500;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+
 @media (max-width:600px ){ 
   .main{
     height: 50vh;
