--- a/src/app/styles/page.module.css
+++ b/src/app/styles/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-image: url("https://img.freepik.com/free-vector/gradient-summer-illustration_23-2148946644.jpg?w=740&t=st=1700930156~exp=1700930756~hmac=a567b66fccf6b5f566a6345683d98a674d8c4ea2c0a60108ec11533a13dcbd84");
+  background-image: url("https://res.cloudinary.com/dizynfu2h/image/upload/v1701132982/website%20images/gradient-summer-illustration_23-2148946644_xefsd6.jpg");
   border-radius: 2rem;
   background-repeat: no-repeat;
   background-size: cover;
@@ -47,7 +47,7 @@
   padding: 0 1rem;
 }
 .subMainThird {
-  background-image: url("https://img.freepik.com/free-vector/mountains-landscape-during-sunset-background-with-lake-sunlit-dark-peaks-flat-vector-illustration_1284-75780.jpg?w=826&t=st=1700944328~exp=1700944928~hmac=91cf7fbaa5f86905b69cf6607927f279d48e2ceac5fb3b51ab35f241a83bad7d");
+  background-image: url("https://res.cloudinary.com/dizynfu2h/image/upload/v1701133055/website%20images/mountains-landscape-during-sunset-background-with-lake-sunlit-dark-peaks-flat-vector-illustration_1284-75780_pmzlre.jpg");
   height: 61vh;
   background-repeat: no-repeat;
   background-size: cover;
